fix: copyright z-index

--- a/src/assets/style/global.scss
+++ b/src/assets/style/global.scss
@@ -39,6 +39,10 @@ body {
   overflow: hidden;
 }
 
+.z-300 {
+  z-index: 300;
+}
+
 .slide-right-enter-active,
 .slide-right-leave-active,
 .slide-left-enter-active,
